add back void** specialty and heavily improve both benchmarks and code surrounding such

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,32 @@ project(boost.out_ptr VERSION 1.0.0 DESCRIPTION "A library for having output poi
 include(CMakePackageConfigHelpers)
 include(GNUInstallDirs)
 
+# # Top Level Directories
+# Check if this is the top-level project or not
+if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
+    set(BOOST_OUT_PTR_IS_TOP_LEVEL_PROJECT true)
+else()
+    set(BOOST_OUT_PTR_IS_TOP_LEVEL_PROJECT false)
+endif()
+
+# Modify bad flags / change defaults if that is the case
+if (BOOST_OUT_PTR_IS_TOP_LEVEL_PROJECT)
+	if (CMAKE_SIZEOF_VOID_P EQUAL 4)
+		set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/x86/${CFG_INT_DIR}/lib")
+		set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/x86/${CFG_INT_DIR}/bin")
+		set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/x86/${CFG_INT_DIR}/bin")
+	else()
+		set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/x64/${CFG_INT_DIR}/lib")
+		set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/x64/${CFG_INT_DIR}/bin")
+		set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/x64/${CFG_INT_DIR}/bin")
+	endif(CMAKE_SIZEOF_VOID_P EQUAL 4)
+
+	if (MSVC)
+		string(REGEX REPLACE "/W[0-4]" "" CMAKE_C_FLAGS ${CMAKE_C_FLAGS})
+		string(REGEX REPLACE "/W[0-4]" "" CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS})
+	endif()
+endif()
+
 # # Options
 option(BOOST_OUT_PTR_CI "Whether or not we are in continguous integration environment" OFF)
 option(BOOST_OUT_PTR_TESTS "Enable build of tests" OFF)
@@ -77,30 +103,12 @@ set_target_properties(boost_out_ptr
 #	"${CMAKE_CURRENT_BINARY_DIR}/cmake/boost/out_ptr-config-version.cmake"
 #	DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/boost")
 
-
-# # Benchmarks, Tests, Examples
-if (BOOST_OUT_PTR_TESTS OR BOOST_OUT_PTR_EXAMPLES OR BOOST_OUT_PTR_BENCHMARKS)
-	if (IS_X86 OR CMAKE_SIZEOF_VOID_P EQUAL 4)
-		set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/x86/lib")
-		set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/x86/bin")
-		set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/x86/bin")
-	else()
-		set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/x64/lib")
-		set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/x64/bin")
-		set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/x64/bin")
-	endif()
-
-	if (MSVC)
-		string(REGEX REPLACE "/W[0-4]" "" CMAKE_C_FLAGS ${CMAKE_C_FLAGS})
-		string(REGEX REPLACE "/W[0-4]" "" CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS})
-	endif()
-
-	enable_testing()
+if (BOOST_OUT_PTR_BENCHMARKS OR BOOST_OUT_PTR_TESTS OR BOOST_OUT_PTR_EXAMPLES)
+	# test and benchmark deps
 	add_subdirectory(vendor/boost/config)
 	add_subdirectory(vendor/boost/core)
 	add_subdirectory(vendor/boost/assert)
 	add_subdirectory(vendor/boost/mp11)
-	# test and benchmark deps
 	add_subdirectory(vendor/ficapi)
 endif()
 
