--- a/cmake/boost_out_ptr-config.cmake.in
+++ b/cmake/boost_out_ptr-config.cmake.in
@@ -9,8 +9,8 @@
 
 include("${CMAKE_CURRENT_LIST_DIR}/boost/boost_out_ptr-targets.cmake")
 
-get_target_property(BOOST_OUT_PTR_INCLUDE_DIRS
+get_target_property(PHD_OUT_PTR_INCLUDE_DIRS
 	Boost::out_ptr INTERFACE_INCLUDE_DIRECTORIES)
 
-set_and_check(BOOST_OUT_PTR_INCLUDE_DIRS "${BOOST_OUT_PTR_INCLUDE_DIRS}")
-set(BOOST_OUT_PTR_LIBRARIES Boost::out_ptr)
+set_and_check(PHD_OUT_PTR_INCLUDE_DIRS "${PHD_OUT_PTR_INCLUDE_DIRS}")
+set(PHD_OUT_PTR_LIBRARIES Boost::out_ptr)
