Take me to the docs ~ where I belong ~

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@
 #  accompanying file LICENSE or copy at
 #  http://www.boost.org/LICENSE_1_0.txt)
 #
-#  See http://www.boost.org/libs/out_ptr/ for documentation.
+#  See https://github.com/ThePhD/out_ptr/blob/master/docs/out_ptr.adoc for documentation.
 
 cmake_minimum_required(VERSION 3.5)
 project(phd.out_ptr VERSION 1.0.0 DESCRIPTION "A library for having output pointers in C-like functions work well with C++ smart pointer types." LANGUAGES C CXX)
