--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -4,7 +4,7 @@
 #  accompanying file LICENSE or copy at
 #  http://www.boost.org/LICENSE_1_0.txt)
 #
-#  See http://www.boost.org/libs/out_ptr/ for documentation.
+#  See https://github.com/ThePhD/out_ptr/blob/master/docs/out_ptr.adoc for documentation.
 
 
 max_jobs: 4
