💚 Set top-level standard in the CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,10 +42,9 @@ if (ZTD_OUT_PTR_IS_TOP_LEVEL_PROJECT)
 		set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/x64/${CFG_INT_DIR}/bin")
 	endif(CMAKE_SIZEOF_VOID_P EQUAL 4)
 
-	if (MSVC)
-		string(REGEX REPLACE "/W[0-4]" "" CMAKE_C_FLAGS ${CMAKE_C_FLAGS})
-		string(REGEX REPLACE "/W[0-4]" "" CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS})
-	endif()
+	set(CMAKE_CXX_STANDARD_REQUIRED YES)
+	set(CMAKE_CXX_STANDARD 11)
+	set(CMAKE_CXX_EXTENSIONS NO)
 endif()
 
 # # Options
