💚 Boy do I not like C++11 !!!

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -45,7 +45,7 @@ if (MSVC)
 		PRIVATE /W4)
 else()
 	target_compile_options(phd.out_ptr.benchmarks
-		PRIVATE -std=c++11 -Wpedantic -Wall -Werror)
+		PRIVATE -Wpedantic -Wall -Werror)
 endif()
 target_link_libraries(phd.out_ptr.benchmarks
 	PRIVATE 
